# rust-book-codes

./: .gitignore  README.md
1. Getting Started/hello_cargo/: Cargo.toml
10. Generic Types, Traits, and Lifetimes/generic_data_types/: Cargo.toml
10. Generic Types, Traits, and Lifetimes/traits_defining_shared_behavior/: Cargo.toml
10. Generic Types, Traits, and Lifetimes/validating_references_with_lifetimes/: Cargo.toml
11. Writing Automated Tests/how_to_write_tests/: Cargo.toml
11. Writing Automated Tests/testOrganization/: Cargo.toml
11. Writing Automated Tests/test_organization/: Cargo.toml
12. An IO Project Building a Command Line Program/minigrep/: Cargo.toml  poem.txt
13. Functional Language Features Iterators and Closures/closures_anonymous_functions_that_can_capture_their_environment/: Cargo.toml
13. Functional Language Features Iterators and Closures/processing_a_series_of_items_with_iterators/: Cargo.toml
2. Programming a Guessing Game/guessing_game/: Cargo.toml
3. Common Programming Concepts/comments/: Cargo.toml
3. Common Programming Concepts/control_flow/: Cargo.toml
3. Common Programming Concepts/data_types/: Cargo.toml
3. Common Programming Concepts/functions/: Cargo.toml
3. Common Programming Concepts/variables/: Cargo.toml
4. Understanding Ownership/references_and_borrowing/: Cargo.toml
4. Understanding Ownership/slice_type/: Cargo.toml
4. Understanding Ownership/what_is_ownership/: Cargo.toml
9. Error Handling/unrecoverable_errors_with_panic/: Cargo.toml
9. Error Handling/unrecoverable_errors_with_panic/src/: main.rs
(+48 files in other folders)
