[package]
name = "unrecoverable_errors_with_panic"
version = "0.1.0"
authors = ["Gabriel Alejandro <gabriel.asa.1296@outlook.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Aborting in Response to a Panic
[profile.release]
panic = 'abort'